Prevent genie icon from moving when browser adds scrollbar

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1,3 +1,7 @@
+html {
+  overflow-y: scroll;
+}
+
 body {
   color: #525252;
   font-family: 'Quicksand', sans-serif;
