--- a/client/src/components/Nav.css
+++ b/client/src/components/Nav.css
@@ -12,6 +12,10 @@ nav a {
     width: 60px;
 }  
 
+.logoContainer{
+    width: 100%;
+}
+
 .logo{
     cursor: pointer;
     width: 50px;
